--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
 
         <h2>🔧 拡張機能の導入手順</h2>
         <ol>
-            <li><a href="/movie-sync-extension.zip" download>こちらのzipファイル</a>をダウンロードしてください。</li>
+            <li><a href="/movie-sync-extension.zip" download>こちらのzipファイル</a></li>
             <li>ZIPファイルを解凍する</li>
             <li><cord>chrome://extensions/</cord>にアクセスする</li>
             <li>右上の「デベロッパーモード」をONにする</li>
